--- a/index.html
+++ b/index.html
@@ -59,7 +59,35 @@
 
     <!-- FOOTER BEGINS THROUGH NAVBAR -->
     <nav class="navbar navbar-default navbar-fixed-bottom" style="height: 100px;  background: linear-gradient(to bottom left, #13547a  0%, #80d0c7 100%);">
+        <img id="img-wrapper" src="sample-img.jpg">
+        <div class="title">
+            <div class="song-name">
+                Safar
+            </div>
+            <div class="album-name">
+                jab harry met sejal
+            </div>
+        </div>
+        <div class="default-bar">
+            <div class="progress-bar">
 
+            </div>
+            <div id="circle-pointer">
+
+            </div>
+        </div>
+        <span class="volume-control glyphicon glyphicon-volume-up"></span>
+        <span id='buttons' class="btn-group" role='group' aria-label="">
+            <button id="prev" class="glyphicon glyphicon-step-backward"></button>
+            <button id="play" class="glyphicon glyphicon-play"></button>
+            <button id="pause" class="glyphicon glyphicon-pause" style="display:none;"></button>
+            <button id="next" class="glyphicon glyphicon-step-forward"></button>
+        </span>
+
+        <span id="shuloop">
+            <button id="rep" class="fa fa-repeat"></button>
+            <button id="ran" class="fa fa-random"></button>
+        </span>    
     </nav>
     <!-- FOOTER ENDS -->
 
