--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
             <!-- NAVBAR OPTIONS -->
             <ul class="nav navbar-nav navbar-right">
-                <li class="active"><a href="#">Home</a></li>
+                <li><a href="#">Home</a></li>
                 <li><a href="#">Favorites</a></li>
                 <li><a href="#">Queue</a></li>
                 <li><a href="#">Library</a></li>
@@ -87,7 +87,7 @@
         <span id="shuloop">
             <button id="rep" class="fa fa-repeat"></button>
             <button id="ran" class="fa fa-random"></button>
-        </span>    
+        </span>
     </nav>
     <!-- FOOTER ENDS -->
 
