--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <link href="https://fonts.googleapis.com/css?family=Nunito+Sans" rel="stylesheet">
 </head>
 <body >
+    <audio id='audio'>
+        <source src='divine.mp3'>
+    </audio>
     <!-- NAVBAR BEGIN -->
     <nav class="navbar navbar-default navbar-fixed-top">
         <div class="container-fluid">
@@ -87,7 +90,7 @@
         <span id="shuloop">
             <button id="rep" class="fa fa-repeat"></button>
             <button id="ran" class="fa fa-random"></button>
-        </span>    
+        </span>
     </nav>
     <!-- FOOTER ENDS -->
 
