--- a/home.html
+++ b/home.html
@@ -20,24 +20,23 @@
             <!-- NAVBAR OPTIONS -->
             <ul class="nav navbar-nav navbar-right">
                 <li class="active"><a href="#">Home</a></li>
-                <li><a href="#">Favorites</a></li>
-                <li><a href="#">Queue</a></li>
-                <li><a href="#">Library</a></li>
-                <li><a href="#">Upload</a></li>
+                <li><a href="#">SingUp</a></li>
+                <li><a href="#">Login</a></li>
+
             </ul>
-            <!-- NAVBAR SEARCH BAR -->
-            <form action="#" method="get" class="navbar-form">
-                <div class="form-group">
-                    <input type="text" class="form-control" id="searchQuery" placeholder="Search" style="font-size: 20px; margin-left: 40px; width: 280px;">
-                </div>
-                <button class ="btn btn-default" id="searchButton" style="margin-left: -43px; border: none; border-radius: 20px;"><i class="fa fa-search" aria-hidden="true" style="font-size: 15px;"></i></button>
-            </form>
         </div>
     </nav>
     <!-- NAVBAR ENDS -->
 
     <div id="box1">
-        <h1>DAFT CREATION</h1>
+        <h1>Welcome Search Your Music</h1>
+        <form action="#" method="get" class="navbar-form">
+            <div class="form-group">
+                <input type="text" class="form-control" id="searchQuery" placeholder="Search" style="font-size: 20px; width: 500px;">
+            </div>
+            <button class ="btn btn-default" id="searchButton" style="margin-left: -63px; border: none; border-radius: 20px;"><i class="fa fa-search" aria-hidden="true" style="font-size: 20px;"></i></button>
+        </form>
+        <img src="loginfb.png" alt="loginfb" style="width: 250px; position: relative; top: 400px; margin: 0 auto; display: block; cursor: pointer;">
     </div>
     <div id="box2">
         <h1>DAFT CREATION</h1>
