--- a/home.html
+++ b/home.html
@@ -22,7 +22,6 @@
                 <li class="active"><a href="#">Home</a></li>
                 <li><a href="#">SingUp</a></li>
                 <li><a href="#">Login</a></li>
-
             </ul>
         </div>
     </nav>
@@ -36,10 +35,79 @@
             </div>
             <button class ="btn btn-default" id="searchButton" style="margin-left: -63px; border: none; border-radius: 20px;"><i class="fa fa-search" aria-hidden="true" style="font-size: 20px;"></i></button>
         </form>
-        <img src="loginfb.png" alt="loginfb" style="width: 250px; position: relative; top: 400px; margin: 0 auto; display: block; cursor: pointer;">
+        <img src="loginfb.png" alt="loginfb" style="width: 250px; position: relative; top: 45vh; margin: 0 auto; display: block; cursor: pointer;">
     </div>
     <div id="box2">
-        <h1>DAFT CREATION</h1>
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-lg-12" style="padding: 0;">
+                    <div class="carousel slide" id="myslider" data-ride="carousel">
+                        <ol class="carousel-indicators">
+                            <li data-target="#myslider" data-slide-to="0" class="active"></li>
+                            <li data-target="#myslider" data-slide-to="1"></li>
+                            <li data-target="#myslider" data-slide-to="2"></li>
+                            <li data-target="#myslider" data-slide-to="3"></li>
+                        </ol>
+                        <div class="carousel-inner">
+                            <div class="item active">
+                                <img src="premium-img1.jpg" style="width: 100%; height: 700px;">
+                                <div class="carousel-caption">
+                                    <h2>Listen Anywhere</h2>
+                                </div>
+                            </div>
+                            <div class="item">
+                                <img src="premium-img2.jpg" style="width: 100%; height: 700px;">
+                                <div class="carousel-caption">
+                                    <h2>Unlimited ad free Music</h2>
+                                </div>
+                            </div>
+                            <div class="item">
+                                <img src="premium-img3.png" style="width: 100%; height: 700px;">
+                                <div class="carousel-caption">
+                                    <h2>Drag and Drop to Upload</h2>
+                                </div>
+                            </div>
+                            <div class="item">
+                                <img src="premium-img4.jpg" style="width: 100%; height: 700px;">
+                                <div class="carousel-caption">
+                                    <h2>Premium Sounds Better</h2>
+                                </div>
+                            </div>
+                        </div>
+                        <a class="left carousel-control" href="#myslider" data-slide="prev">
+                            <span class="glyphicon glyphicon-chevron-left"></span>
+                        </a>
+                        <a class="right carousel-control" href="#myslider" data-slide="next">
+                            <span class="glyphicon glyphicon-chevron-right"></span>
+                        </a>
+                    </div>
+                </div>
+          </div>
+        </div>
+        <nav class="navbar navbar-default navbar-bottom" style="height: 200px;">
+            <div class="container">
+                <!-- FOOTER HEADER  -->
+                <div class="navbar-header">
+                    <a href="/index.html"  class="navbar-brand"><img src="Spotify_footer.png" alt="logo" style="height: 270%; margin-top: 40px; display: inline; "></a>
+                </div>
+
+                <ul class="nav navbar-nav navbar-right">
+                    <li><a style="margin-top: 70px;">Copyright (c) 2017 Spotify All Rights Reserved.</a></li>
+                </ul>
+            </div>
+        </nav>
     </div>
+
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <script>
+        $(".carousel").carousel({
+            interval: 2000,
+            pause: false,
+            wrap: true,
+            keyboard: true
+        });
+    </script>
 </body>
 </html>
