--- a/index.html
+++ b/index.html
@@ -71,19 +71,28 @@
                 jab harry met sejal
             </div>
         </div>
-        <div class="default-bar">
-            <div class="progress-bar">
+        <div id='defBar' class="default-bar" style="cursor:pointer">
+            <!-- <div id='time' style='display:none'>
+            </div> -->
+            <div id='progBar' class="progress-bar">
 
             </div>
             <div id="circle-pointer">
 
             </div>
         </div>
-        <span class="volume-control glyphicon glyphicon-volume-up"></span>
+        <div class="volume_container" style="width:100px;height:200px;background-color:gray;">
+            <div id='defVol' class="progress">
+                  <div id='volProg' class="progress-bar prog2" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100" style="min-width: 10px;">
+                  </div>
+            </div>
+        </div>
+        <span id='mute' class="volume-control glyphicon glyphicon-volume-up" onclick="muteOrUnmute()" ></span>
+        <span id='unmute' class="volume-control glyphicon glyphicon-volume-off" style="display:none" onclick="muteOrUnmute()"></span>
         <span id='buttons' class="btn-group" role='group' aria-label="">
             <button id="prev" class="glyphicon glyphicon-step-backward"></button>
-            <button id="play" class="glyphicon glyphicon-play"></button>
-            <button id="pause" class="glyphicon glyphicon-pause" style="display:none;"></button>
+            <button id="play" class="glyphicon glyphicon-play" onclick="playOrPause()"></button>
+            <button id="pause" class="glyphicon glyphicon-pause" onclick="playOrPause()" style="display:none;"></button>
             <button id="next" class="glyphicon glyphicon-step-forward"></button>
         </span>
 
@@ -93,8 +102,8 @@
         </span>
     </nav>
     <!-- FOOTER ENDS -->
-
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src='player.js'></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </body>
 </html>
