--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <!-- NAVBAR SEARCH BAR -->
             <form action="#" method="get" class="navbar-form">
                 <div class="form-group">
-                    <input type="text" class="form-control" id="searchQuery" placeholder="Search" style="font-size: 20px; margin-left: 40px; width: 380px;">
+                    <input type="text" class="form-control" id="searchQuery" placeholder="Search" style="font-size: 20px; margin-left: 40px; width: 280px;">
                 </div>
                 <button class ="btn btn-default" style="margin-left: -43px; border: none; border-radius: 20px;"><i class="fa fa-search" aria-hidden="true" style="font-size: 15px;"></i></button>
             </form>
@@ -93,5 +93,7 @@
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="main.js"></script>
+
 </body>
 </html>
