--- a/home.html
+++ b/home.html
@@ -20,7 +20,7 @@
             <!-- NAVBAR OPTIONS -->
             <ul class="nav navbar-nav navbar-right">
                 <li class="active"><a href="#">Home</a></li>
-                <li><a href="#">SingUp</a></li>
+                <li><a href="#">SignUp</a></li>
                 <li><a href="#">Login</a></li>
             </ul>
         </div>
