--- a/upload.html
+++ b/upload.html
@@ -55,7 +55,7 @@
                 <a href="#" class="list-group-item"><img src="Divide_cover.png" style="width: 40px; display: inline; margin-right: 10px;">Third item</a>
             </div>
         </div>
-        <div class="col-lg-10 thumbs" style="background-image: url('sky-footer.jpg'); background-size: cover;">
+        <div class="col-lg-10 thumbs" style="background-image: url(''); background-size: cover;">
             <div id="dropBox">
                 <img src="cloud-upload.png" id="cloud">
                 <h3>Drag Your mp3 To Upload</h3>
@@ -99,6 +99,22 @@
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <script type="text/javascript">
+    $(function() {
 
+        $("#searchQuery").focus(function(){
+            $(this).css("width", "400px");
+            $(this).css("transition", "0.3s");
+
+        });
+
+
+        $("#searchQuery").focusout(function(){
+            $(this).css("width", "280px");
+            });
+
+
+    });
+    </script>
 </body>
 </html>
