--- a/favorites.html
+++ b/favorites.html
@@ -77,8 +77,8 @@
                                 Genre:
                             </div>
                             <div class="options">
-                                <a style="text-decoration: none; color: white;" href="#"><i class="fa fa-heart-o" aria-hidden="true"></i></a>
-                                <a style="text-decoration: none; color: white;" href="#"><i class="fa fa-heart" aria-hidden="true" style="display: none;"></i></a>
+                                <a style="text-decoration: none; color: white;" href="#"><i class="fa fa-heart-o" aria-hidden="true" style="display: none;"></i></a>
+                                <a style="text-decoration: none; color: white;" href="#"><i class="fa fa-heart" aria-hidden="true"></i></a>
                                 <a style="text-decoration: none; color: white;" href="#"><i class="fa fa-list-ul" aria-hidden="true" style="position: relative; left: 200px;"></i></a>
                             </div>
                         </div>
