--- a/home.html
+++ b/home.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>Music Player</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-    <link rel="stylesheet" href="/css/home.css">
+    <link rel="stylesheet" href="css/home.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="https://fonts.googleapis.com/css?family=Nunito+Sans" rel="stylesheet">
 </head>
@@ -14,7 +14,7 @@
         <div class="container-fluid">
             <!-- NAVBAR HEADER  -->
             <div class="navbar-header">
-                <a href="/index.html"  class="navbar-brand"><img src="spotify.png" alt="logo" style="height: 220%; margin-top: -10px; display: inline;"></a>
+                <a href="/index.html"  class="navbar-brand"><img src="Spotify_footer.png" alt="logo" style="height: 220%; margin-top: -10px; display: inline;"></a>
             </div>
 
             <!-- NAVBAR OPTIONS -->
@@ -50,25 +50,25 @@
                         </ol>
                         <div class="carousel-inner">
                             <div class="item active">
-                                <img src="premium-img1.jpg" style="width: 100%; height: 700px;">
+                                <img src="premium-img1.jpg" style="width: 100%; height: 750px;">
                                 <div class="carousel-caption">
                                     <h2>Listen Anywhere</h2>
                                 </div>
                             </div>
                             <div class="item">
-                                <img src="premium-img2.jpg" style="width: 100%; height: 700px;">
+                                <img src="premium-img2.jpg" style="width: 100%; height: 750px;">
                                 <div class="carousel-caption">
                                     <h2>Unlimited ad free Music</h2>
                                 </div>
                             </div>
                             <div class="item">
-                                <img src="premium-img3.png" style="width: 100%; height: 700px;">
+                                <img src="premium-img3.png" style="width: 100%; height: 750px;">
                                 <div class="carousel-caption">
                                     <h2>Drag and Drop to Upload</h2>
                                 </div>
                             </div>
                             <div class="item">
-                                <img src="premium-img4.jpg" style="width: 100%; height: 700px;">
+                                <img src="premium-img4.jpg" style="width: 100%; height: 750px;">
                                 <div class="carousel-caption">
                                     <h2>Premium Sounds Better</h2>
                                 </div>
@@ -84,15 +84,15 @@
                 </div>
           </div>
         </div>
-        <nav class="navbar navbar-default navbar-bottom" style="height: 200px;">
+        <nav class="navbar navbar-default navbar-bottom" style="height: 150px;">
             <div class="container">
                 <!-- FOOTER HEADER  -->
                 <div class="navbar-header">
-                    <a href="/index.html"  class="navbar-brand"><img src="Spotify_footer.png" alt="logo" style="height: 270%; margin-top: 40px; display: inline; "></a>
+                    <a href="/index.html"  class="navbar-brand"><img src="Spotify_footer.png" alt="logo" style="height: 270%; margin-top: 20px; display: inline; "></a>
                 </div>
 
                 <ul class="nav navbar-nav navbar-right">
-                    <li><a style="margin-top: 70px;">Copyright (c) 2017 Spotify All Rights Reserved.</a></li>
+                    <li><a style="margin-top: 50px;">Copyright (c) 2017 Spotify All Rights Reserved.</a></li>
                 </ul>
             </div>
         </nav>
