--- a/favorites.html
+++ b/favorites.html
@@ -58,7 +58,7 @@
                 <div class="row">
                     <h1 style="text-align: center;">Your Favorites <i class="fa fa-heart" aria-hidden="true" style="color: #E91E63;"></i></h1>
                 </div>
-                <div class="row" style="margin-left: 40px;display: flex; flex-wrap: wrap;">
+                <div id='favDisp' class="row" style="margin-left: 40px;display: flex; flex-wrap: wrap;">
 
                     <div class="col-lg-3 holder">
                         <div class="main">
