--- a/public_static/index.html
+++ b/public_static/index.html
@@ -10,7 +10,7 @@
 </head>
 <body >
     <audio id='audio'>
-        <source src='divine.mp3'>
+        <source id="aud_src" src='divine.mp3'>
     </audio>
     <!-- NAVBAR BEGIN -->
     <nav class="navbar navbar-default navbar-fixed-top">
