--- a/public_static/index.html
+++ b/public_static/index.html
@@ -95,9 +95,9 @@
             <button id="ran" class="fa fa-random"></button>
             <button id='mute' class="fa fa-volume-up" onclick="muteOrUnmute()" ></button>
             <button id='unmute' class="fa fa-volume-off" style="display:none" onclick="muteOrUnmute()"></button>
-            <div class="volume_container" style="width:100px;height:200px;background-color:gray;">
+            <div class="volume_container" style="width:30px;height:200px;background-color:whitesmoke;">
                 <div id='defVol' class="progress">
-                      <div id='volProg' class="progress-bar prog2" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100" style="min-width: 10px;">
+                      <div id='volProg' class="progress-bar prog2" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100" style="min-width: 10px; position: relative; top: -1px;">
                       </div>
                 </div>
             </div>
