--- a/public_static/index.html
+++ b/public_static/index.html
@@ -99,6 +99,9 @@
                 <div id='defVol' class="progress">
                       <div id='volProg' class="progress-bar prog2" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100" style="min-width: 10px; position: relative; top: -1px;">
                       </div>
+                      <div id="circle-pointer2">
+
+                      </div>
                 </div>
             </div>
         </span>
