--- a/public_static/index.html
+++ b/public_static/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="utf-8">
     <title>Music Player</title>
+    <link rel="shortcut icon" href="spotify.png" />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <link rel="stylesheet" href="css/index.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
