--- a/public_static/home.html
+++ b/public_static/home.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="utf-8">
     <title>Music Player</title>
+    <link rel="shortcut icon" href="spotify.png" />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <link rel="stylesheet" href="css/home.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -35,7 +36,11 @@
             </div>
             <button class ="btn btn-default" id="searchButton" style="margin-left: -63px; border: none; border-radius: 20px;"><i class="fa fa-search" aria-hidden="true" style="font-size: 20px;"></i></button>
         </form>
-        <img src="loginfb.png" alt="loginfb" style="width: 250px; position: relative; top: 45vh; margin: 0 auto; display: block; cursor: pointer;">
+        <div style="position: relative; top: 45vh; margin: 0 auto; display: block; text-align: center; cursor: pointer;">
+            <img src="loginfb.png" alt="loginfb" style="width: 250px;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+            <a href="http://localhost:5000" class="btn btn-default" style="width: 250px; height: 38px; font-size: 18px;">Go to Music Player</a>
+        </div>
+
     </div>
     <div id="box2">
         <div class="container-fluid">
