--- a/public_static/dropdown.html
+++ b/public_static/dropdown.html
@@ -25,7 +25,7 @@
             <ul class="nav navbar-nav navbar-right">
                 <li id="homeNav"><a href="home.html">Home</a></li>
                 <li id="favoritesNav"><a href="#">Favorites</a></li>
-                <!-- <li id="queueNav"><a href="#">Queue</a></li> -->
+                <li id="queueNav"><a href="#">Playlists</a></li>
                 <li id="libraryNav"><a href="#">Library</a></li>
                 <li id="uploadNav"><a href="#">Upload</a></li>
             </ul>
