--- a/public_static/index.html
+++ b/public_static/index.html
@@ -5,105 +5,114 @@
     <title>Music Player</title>
     <link rel="shortcut icon" href="spotify.png" />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/index.css">
+    <link rel="stylesheet" href="css/home.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="https://fonts.googleapis.com/css?family=Nunito+Sans" rel="stylesheet">
 </head>
-<body >
-    <audio id='audio'>
-        <source id="aud_src" src='divine.mp3'>
-    </audio>
+<body>
     <!-- NAVBAR BEGIN -->
     <nav class="navbar navbar-default navbar-fixed-top">
         <div class="container-fluid">
             <!-- NAVBAR HEADER  -->
             <div class="navbar-header">
-                <a href="/index.html"  class="navbar-brand"><img src="spotify.png" alt="logo" style="height: 220%; margin-top: -10px; display: inline;"></a>
+                <a href="/index.html"  class="navbar-brand"><img src="Spotify_footer.png" alt="logo" style="height: 220%; margin-top: -10px; display: inline;"></a>
             </div>
 
             <!-- NAVBAR OPTIONS -->
             <ul class="nav navbar-nav navbar-right">
-                <li id="homeNav"><a href="home.html">Home</a></li>
-                <li id="favoritesNav"><a href="#">Favorites</a></li>
-                <!-- <li id="queueNav"><a href="#">Queue</a></li> -->
-                <li id="libraryNav"><a href="#">Library</a></li>
-                <li id="uploadNav"><a href="#">Upload</a></li>
+                <li class="active"><a href="#">Home</a></li>
+                <li><a href="#">SignUp</a></li>
+                <li><a href="#">Login</a></li>
             </ul>
-            <!-- NAVBAR SEARCH BAR -->
-            <form action="#" method="get" class="navbar-form">
-                <div class="form-group">
-                    <input type="text" class="form-control" id="searchQuery" placeholder="Search" style="font-size: 20px; margin-left: 40px; width: 280px;">
-                </div>
-                <button class ="btn btn-default" style="margin-left: -43px; border: none; border-radius: 20px;"><i class="fa fa-search" aria-hidden="true" style="font-size: 15px;"></i></button>
-            </form>
         </div>
     </nav>
     <!-- NAVBAR ENDS -->
-    <div class="container-fluid" style="padding: 70px 0 100px 0; margin: 0px;">
-        <div class="col-lg-2 thumbs" style="background-color: #eee; overflow-y: scroll; padding: 13px 0;">
-            <div id='queueView' class="list-group">
-                the queue is empty
-                <!-- <a href="#" class="list-group-item active"><img src="Divide_cover.png" style="width: 40px; display: inline; margin-right: 10px;">First item<i class="fa fa-volume-up" aria-hidden="true" style="font-size: 26px; float: right; position: relative; top: 8px;"></i></a> -->
-                <!-- <a href="#" class="list-group-item"><img src="Divide_cover.png" style="width: 40px; display: inline; margin-right: 10px;">Third item</a> -->
+
+    <div id="box1">
+        <h1>Welcome Search Your Music</h1>
+        <form action="#" method="get" class="navbar-form">
+            <div class="form-group">
+                <input type="text" class="form-control" id="searchQuery" placeholder="Search" style="font-size: 20px; width: 500px;">
             </div>
+            <button class ="btn btn-default" id="searchButton" style="margin-left: -63px; border: none; border-radius: 20px;"><i class="fa fa-search" aria-hidden="true" style="font-size: 20px;"></i></button>
+        </form>
+        <div style="position: relative; top: 45vh; margin: 0 auto; display: block; text-align: center; cursor: pointer;">
+            <img src="loginfb.png" alt="loginfb" style="width: 250px;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+            <a href="http://localhost:5000/main.html" class="btn btn-default" style="width: 250px; height: 38px; font-size: 18px;">Go to Music Player</a>
         </div>
-        <div id='showMe' class="col-lg-10 thumbs" style="background-color: #fff; overflow-y: scroll;">
-            <img src="Divide_cover.png" id="playedSong">
+
+    </div>
+    <div id="box2">
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-lg-12" style="padding: 0;">
+                    <div class="carousel slide" id="myslider" data-ride="carousel">
+                        <ol class="carousel-indicators">
+                            <li data-target="#myslider" data-slide-to="0" class="active"></li>
+                            <li data-target="#myslider" data-slide-to="1"></li>
+                            <li data-target="#myslider" data-slide-to="2"></li>
+                            <li data-target="#myslider" data-slide-to="3"></li>
+                        </ol>
+                        <div class="carousel-inner">
+                            <div class="item active">
+                                <img src="premium-img1.jpg" style="width: 100%; height: 750px;">
+                                <div class="carousel-caption">
+                                    <h2>Listen Anywhere</h2>
+                                </div>
+                            </div>
+                            <div class="item">
+                                <img src="premium-img2.jpg" style="width: 100%; height: 750px;">
+                                <div class="carousel-caption">
+                                    <h2>Unlimited ad free Music</h2>
+                                </div>
+                            </div>
+                            <div class="item">
+                                <img src="premium-img3.png" style="width: 100%; height: 750px;">
+                                <div class="carousel-caption">
+                                    <h2>Drag and Drop to Upload</h2>
+                                </div>
+                            </div>
+                            <div class="item">
+                                <img src="premium-img4.jpg" style="width: 100%; height: 750px;">
+                                <div class="carousel-caption">
+                                    <h2>Premium Sounds Better</h2>
+                                </div>
+                            </div>
+                        </div>
+                        <a class="left carousel-control" href="#myslider" data-slide="prev">
+                            <span class="glyphicon glyphicon-chevron-left"></span>
+                        </a>
+                        <a class="right carousel-control" href="#myslider" data-slide="next">
+                            <span class="glyphicon glyphicon-chevron-right"></span>
+                        </a>
+                    </div>
+                </div>
+          </div>
         </div>
+        <nav class="navbar navbar-default navbar-bottom" style="height: 150px;">
+            <div class="container">
+                <!-- FOOTER HEADER  -->
+                <div class="navbar-header">
+                    <a href="/index.html"  class="navbar-brand"><img src="Spotify_footer.png" alt="logo" style="height: 270%; margin-top: 20px; display: inline; "></a>
+                </div>
+
+                <ul class="nav navbar-nav navbar-right">
+                    <li><a style="margin-top: 50px;">Copyright (c) 2017 Spotify All Rights Reserved.</a></li>
+                </ul>
+            </div>
+        </nav>
     </div>
 
-    <!-- FOOTER BEGINS THROUGH NAVBAR -->
-    <nav class="navbar navbar-default navbar-fixed-bottom" style="height: 100px;  background: linear-gradient(to bottom left, #13547a  0%, #80d0c7 100%);">
-        <img id="img-wrapper" src="sample-img.jpg">
-        <div class="title">
-            <div class="song-name">
-                Safar
-            </div>
-            <div class="album-name">
-                jab harry met sejal
-            </div>
-        </div>
-        <div id='mainbar' style="display:inline-block;position:relative;width:800px;margin-left:100px;height:40px;background-color:transparent;cursor:pointer">
-            <div id='defBar' class="default-bar" style="cursor:pointer">
-                <!-- <div id='time' style='display:none'>
-                </div> -->
-                <div id='progBar' class="progress-bar">
 
-                </div>
-                <div id="circle-pointer">
-
-                </div>
-            </div>
-        </div>
-        <span id='buttons' class="btn-group" role='group' aria-label="">
-            <button id="prev" class="glyphicon glyphicon-step-backward" onclick='playPrev()'></button>
-            <button id="play" class="glyphicon glyphicon-play" onclick="playOrPause()"></button>
-            <button id="pause" class="glyphicon glyphicon-pause" onclick="playOrPause()" style="display:none;"></button>
-            <button id="next" class="glyphicon glyphicon-step-forward" onclick="playNext()"></button>
-        </span>
-
-        <span id="shuloop">
-            <button id="rep" class="fa fa-repeat"></button>
-            <button id="ran" class="fa fa-random"></button>
-            <button id='mute' class="fa fa-volume-up" onclick="muteOrUnmute()" ></button>
-            <button id='unmute' class="fa fa-volume-off" style="display:none" onclick="muteOrUnmute()"></button>
-            <div class="volume_container" style="width:30px;height:200px;background-color:whitesmoke;">
-                <div id='defVol' class="progress">
-                      <div id='volProg' class="progress-bar prog2" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100" style="min-width: 10px; position: relative; top: -1px;">
-                      </div>
-                      <div id="circle-pointer2">
-
-                      </div>
-                </div>
-            </div>
-        </span>
-
-    </nav>
-    <!-- FOOTER ENDS -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script src='player.js'></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-    <script type="text/javascript" src="main.js"></script>
-
+    <script>
+        $(".carousel").carousel({
+            interval: 2500,
+            pause: false,
+            wrap: true,
+            keyboard: true
+        });
+    </script>
 </body>
 </html>
