--- a/public_static/main.html
+++ b/public_static/main.html
@@ -40,9 +40,10 @@
     </nav>
     <!-- NAVBAR ENDS -->
     <div class="container-fluid" style="padding: 70px 0 100px 0; margin: 0px;">
-        <div class="col-lg-2 thumbs" style="background-color: #eee; overflow-y: scroll; padding: 13px 0;">
+        <div class="col-lg-2 thumbs" style="background-color: #eee; overflow-y: scroll; padding: 9px 0; overflow-x: visible!important; box-shadow: inset 0 0 23px rgba(0,0,0,0.5)">
+            <h2 style="text-align: center; margin-top: 100%; color: gray;">The Queue is Empty</h2>
             <div id='queueView' class="list-group">
-                the queue is empty
+                <!-- <h2 style=" position: relative; top:0; left:0; right:0;bottom:0;margin: 0 auto;">The Queue is Empty</h2> -->
                 <!-- <a href="#" class="list-group-item active"><img src="Divide_cover.png" style="width: 40px; display: inline; margin-right: 10px;">First item<i class="fa fa-volume-up" aria-hidden="true" style="font-size: 26px; float: right; position: relative; top: 8px;"></i></a> -->
                 <!-- <a href="#" class="list-group-item"><img src="Divide_cover.png" style="width: 40px; display: inline; margin-right: 10px;">Third item</a> -->
             </div>
