--- a/public_static/main.html
+++ b/public_static/main.html
@@ -23,7 +23,7 @@
 
             <!-- NAVBAR OPTIONS -->
             <ul class="nav navbar-nav navbar-right">
-                <li id="homeNav"><a href="home.html">Home</a></li>
+                <li id="homeNav"><a href="http://localhost:5000/">Home</a></li>
                 <li id="favoritesNav"><a href="#">Favorites</a></li>
                 <!-- <li id="queueNav"><a href="#">Queue</a></li> -->
                 <li id="libraryNav"><a href="#">Library</a></li>
