--- a/public_static/dropdown.html
+++ b/public_static/dropdown.html
@@ -47,7 +47,7 @@
                     <div class="dropdown" style="float: right; top: 2px;">
                         <button class="btn btn-default dropdown-toggle" type="button" data-toggle="dropdown"><img src="add.png" width="26px">
                         </button>
-                        <ul class="dropdown-menu"style="position: absolute; z-index: 100000; left: -10px;" >
+                        <ul class="dropdown-menu" style="position: absolute; left: -170px;" >
                           <li><a href="#"><i class="fa fa-heart" aria-hidden="true" style="color: lightgray;"></i> Add to Favourites</a></li>
                           <li><a href="#"><i class="fa fa-heart" aria-hidden="true" style="color: #E91E63;"></i> Added to Favourites &nbsp;&nbsp;&nbsp;<span style="color: gray">Remove</span></a></li>
                           <li><a href="#"><i class="fa fa-times" aria-hidden="true" style="color: lightgray; font-size: 18px;"></i> Remove from Playlist</a></li>
