--- a/public_static/dropdown.html
+++ b/public_static/dropdown.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>Music Player</title>
+    <title>: Music Player</title>
     <link rel="shortcut icon" href="spotify.png" />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <link rel="stylesheet" href="css/dropdown.css">
@@ -41,6 +41,9 @@
     <!-- NAVBAR ENDS -->
     <div class="container-fluid" style="padding: 70px 0 100px 0; margin: 0px; ">
         <div class="col-lg-2 thumbs" style="background-color: #eee; overflow-y: scroll; padding: 9px 0; overflow-x: visible!important; box-shadow: inset 0 0 23px rgba(0,0,0,0.5)"><!--important-->
+            <div id="clearQueue">
+                <button type="button" name="button" id="clearButton">Clear Queue</button>
+            </div>
             <div class="list-group">
                 <li class="list-group-item active"><img src="Divide_cover.png" style="width: 40px; display: inline; margin-right: 10px;">First item
                     <i class="fa fa-volume-up" aria-hidden="true" style="margin-left: 5px; font-size: 26px; float: right; position: relative; top: 8px;"></i>
