--- a/public_static/main.html
+++ b/public_static/main.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>Music Player</title>
+    <title> Music Player</title>
     <link rel="shortcut icon" href="spotify.png" />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <link rel="stylesheet" href="css/index.css">
@@ -41,6 +41,9 @@
     <!-- NAVBAR ENDS -->
     <div class="container-fluid" style="padding: 70px 0 100px 0; margin: 0px;">
         <div class="col-lg-2 thumbs" style="background-color: #eee; overflow-y: scroll; padding: 9px 0; overflow-x: visible!important; box-shadow: inset 0 0 23px rgba(0,0,0,0.5)">
+            <div id="clearQueue">
+                <button type="button" name="button" id="clearButton">Clear Queue</button>
+            </div>
             <div id='queueView' class="list-group">
                 <h2 style="text-align: center; margin-top: 100%; color: gray;">The Queue is Empty</h2>
                 <!-- <h2 style=" position: relative; top:0; left:0; right:0;bottom:0;margin: 0 auto;">The Queue is Empty</h2> -->
