--- a/public_static/main.html
+++ b/public_static/main.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>Music Player</title>
     <link rel="shortcut icon" href="spotify.png" />
+    <link rel="stylesheet" href="dropzone.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <link rel="stylesheet" href="css/index.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -86,9 +87,9 @@
             <button id="ran" class="fa fa-random"></button>
             <button id='mute' class="fa fa-volume-up" onclick="muteOrUnmute()" ></button>
             <button id='unmute' class="fa fa-volume-off" style="display:none" onclick="muteOrUnmute()"></button>
-            <div class="volume_container" style="width:30px;height:200px;background-color:whitesmoke;">
+            <div class="volume_container" style="cursor:pointer;width:30px;height:200px;background-color:whitesmoke;">
                 <div id='defVol' class="progress">
-                      <div id='volProg' class="progress-bar prog2" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100" style="min-width: 10px; position: relative; top: -1px;">
+                      <div id='volProg' class="progress-bar prog2" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100" style="cursor:pointer;min-width: 10px; position: relative; top: -1px;">
                       </div>
                       <div id="circle-pointer2">
 
@@ -103,6 +104,7 @@
     <script src='player.js'></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <script type="text/javascript" src="main.js"></script>
+    <script type="text/javascript" src='dropzone.js'></script>
 
 </body>
 </html>
