--- a/public_static/main.html
+++ b/public_static/main.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="https://fonts.googleapis.com/css?family=Nunito+Sans" rel="stylesheet">
 </head>
-<body >
+<body style="overflow-y:hidden;">
     <audio id='audio'>
         <source id="aud_src" src=''>
     </audio>
@@ -87,7 +87,7 @@
             <div class="album-name">
             </div>
         </div>
-        <div id='mainbar' style="display:inline-block;position:relative;width:10vw;margin-left:50px;height:40px;background-color:transparent;cursor:pointer; margin-right: 0;">
+        <div id='mainbar' style="display:inline-block;position:relative;width:10%;margin-left:50px;height:40px;background-color:transparent;cursor:pointer; margin-right: 0;">
             <div id='defBar' class="default-bar" style="cursor:pointer; background-color: darkgray;">
                 <!-- <div id='time' style='display:none'>
                 </div> -->
