--- a/public_static/main.html
+++ b/public_static/main.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="https://fonts.googleapis.com/css?family=Nunito+Sans" rel="stylesheet">
 </head>
-<body >
+<body style="overflow-y:hidden;">
     <audio id='audio'>
         <source id="aud_src" src=''>
     </audio>
@@ -75,7 +75,12 @@
             </div>
         </div>
         <div id='showMe' class="col-lg-10 thumbs" style="background-color: #fff; overflow-y: scroll;">
-            <img src="Divide_cover.png" id="playedSong">
+            <!-- <img src="Divide_cover.png" id="playedSong"> -->
+            <!-- <form ref="uploadForm" id="uploadForm" action="http://localhost:5000/upload"  type="text" class="dropzone" method="post" encType="multipart/form-data" name="file"> -->
+
+            <!-- </form> -->
+
+                <!-- <button type="submit">submit</button> -->
         </div>
     </div>
 
