--- a/public_static/main.html
+++ b/public_static/main.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="utf-8">
     <title> Music Player</title>
+    <!-- <link rel="stylesheet" href="css/playlist.css"> -->
     <link rel="shortcut icon" href="spotify.png" />
     <link rel="stylesheet" href="dropzone.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
@@ -26,7 +27,7 @@
             <ul class="nav navbar-nav navbar-right">
                 <li id="homeNav"><a href="http://localhost:5000/">Home</a></li>
                 <li id="favoritesNav"><a href="#">Favorites</a></li>
-                <li id="queueNav"><a href="#">Playlists</a></li>
+                <li id="playlistNav"><a href="#">Playlists</a></li>
                 <li id="libraryNav"><a href="#">Library</a></li>
                 <li id="uploadNav"><a href="#">Upload</a></li>
             </ul>
