--- a/public_static/playlist.html
+++ b/public_static/playlist.html
@@ -59,17 +59,14 @@
                     <h1 style="text-align: center;">Your Playlists ♬</h1>
                 </div>
                 <div class="row" style="margin-left: 40px;display: flex; flex-wrap: wrap;">
-
-                    <div class="col-lg-3 holder">
-                        <div class="main">
-                            <img src="Divide_cover.png" height="100%" width="100%;">
+                    <div class="col-lg-3 holder"><div class="main"><img src="Divide_cover.png" height="100%" width="100%;">
                             <div class="blackFrame">
 
                             </div>
                             <div class="songName">
                                 PLAYLISTNAME
                             </div>
-                            <div class="playButton">
+                            <div class="playButton playlist">
                                 <i data-toggle="tooltip" title="Play Playlist" class="fa fa-play-circle-o fa-2x" aria-hidden="true"></i>
                             </div>
 
@@ -78,7 +75,6 @@
                                 <a data-toggle="tooltip" title="View Playlist" style="text-decoration: none; color: white;" href="#"><i class="fa fa-list-ul" aria-hidden="true" style="position: relative; left: 200px;"></i></a>
                             </div>
                         </div>
-                        <h3>Song Name</h3>
                     </div>
 
                     <div class="col-lg-3 holder">
