--- a/public_static/playlist.html
+++ b/public_static/playlist.html
@@ -57,6 +57,25 @@
             <div class="container-fluid" >
                 <div class="row">
                     <h1 style="text-align: center;">Your Playlists ♬</h1>
+                    <button style="float: right; position: relative; top: -45px; background-color: #2ecc71;border-color: transparent;outline: none; border-radius: 18px; font-size: 16px;" type="button" class="btn btn-info" data-toggle="modal" data-target="#addtoPlaylist">Create New Playlist</button>
+                    <div class="modal fade" id="addtoPlaylist" role="dialog"><!-- dont remove this; this is for target-->
+                        <div class="modal-dialog">
+                          <!-- Modal content-->
+                          <div class="modal-content">
+                                <div class="modal-header alert alert-success">
+                                  <button type="button" class="close" data-dismiss="modal">&times;</button>
+                                  <h4 class="modal-title">Creating New Playlist</h4>
+                                </div>
+                                <div class="modal-body">
+                                  <input type="text" class="form-control" placeholder="Enter the Name of Playlist" style="font-size: 16px;">
+                                </div>
+                                <div class="modal-footer">
+                                  <button type="button" class="btn btn-default" data-dismiss="modal">SUBMIT</button>
+                                  <button type="button" class="btn btn-default" data-dismiss="modal">CANCEL</button>
+                                </div>
+                          </div>
+                        </div>
+                    </div>
                 </div>
                 <div class="row" style="margin-left: 40px;display: flex; flex-wrap: wrap;">
                     <div class="col-lg-3 holder"><div class="main"><img src="Divide_cover.png" height="100%" width="100%;">
