--- a/public_static/playlistDisp.html
+++ b/public_static/playlistDisp.html
@@ -77,50 +77,6 @@
 
                     <div class="col-lg-7 col-md-7 col-sm-7">
                         <div class="list-group" id="playlist" style="padding: 70px 50px 150px 30px;width: 100%;">
-                            <li href="#" class="list-group-item"><span style="color: lightgray; margin-right: 20px; margin-left: 15px;">1</span><div style="display: inline-block;"><img src="Divide_cover.png" style="width: 40px; display: inline; margin-right: 10px;"></div><div style="display: inline-block;position: relative; top: 12px;"><span class="songTitle">First Item</span><br><span class="art">artist</span></div>
-                                <div class="dropdown" style="float: right; top: 10px;">
-                                    <button class="btn btn-default dropdown-toggle playlist-drop" type="button" data-toggle="dropdown" style="outline: none;"><img src="add.png" width="26px">
-                                    </button>
-                                    <ul class="dropdown-menu" style="position: absolute; left: -200px;" >
-                                      <li><a href="#"><i class="fa fa-heart" aria-hidden="true" style="color: lightgray;"></i> Add to Favourites</a></li>
-                                      <li><a href="#"><i class="fa fa-heart" aria-hidden="true" style="color: #E91E63;"></i> Added to Favourites &nbsp;&nbsp;&nbsp;<span style="color: gray">Remove</span></a></li>
-                                      <li><a href="#"><i class="fa fa-times" aria-hidden="true" style="color: lightgray; font-size: 18px;"></i> Remove from Playlist</a></li>
-                                    </ul>
-                                </div>
-                            </li>
-                            <li href="#" class="list-group-item"><span style="color: lightgray; margin-right: 20px; margin-left: 15px;">1</span><div style="display: inline-block;"><img src="Divide_cover.png" style="width: 40px; display: inline; margin-right: 10px;"></div><div style="display: inline-block;position: relative; top: 12px;"><span class="songTitle">First Item</span><br><span class="art">artist</span></div>
-                                <div class="dropdown" style="float: right; top: 10px;">
-                                    <button class="btn btn-default dropdown-toggle playlist-drop" type="button" data-toggle="dropdown" style="outline: none;"><img src="add.png" width="26px">
-                                    </button>
-                                    <ul class="dropdown-menu" style="position: absolute; left: -200px;" >
-                                      <li><a href="#"><i class="fa fa-heart" aria-hidden="true" style="color: lightgray;"></i> Add to Favourites</a></li>
-                                      <li><a href="#"><i class="fa fa-heart" aria-hidden="true" style="color: #E91E63;"></i> Added to Favourites &nbsp;&nbsp;&nbsp;<span style="color: gray">Remove</span></a></li>
-                                      <li><a href="#"><i class="fa fa-times" aria-hidden="true" style="color: lightgray; font-size: 18px;"></i> Remove from Playlist</a></li>
-                                    </ul>
-                                </div>
-                            </li>
-                            <li href="#" class="list-group-item"><span style="color: lightgray; margin-right: 20px; margin-left: 15px;">1</span><div style="display: inline-block;"><img src="Divide_cover.png" style="width: 40px; display: inline; margin-right: 10px;"></div><div style="display: inline-block;position: relative; top: 12px;"><span class="songTitle">First Item</span><br><span class="art">artist</span></div>
-                                <div class="dropdown" style="float: right; top: 10px;">
-                                    <button class="btn btn-default dropdown-toggle playlist-drop" type="button" data-toggle="dropdown" style="outline: none;"><img src="add.png" width="26px">
-                                    </button>
-                                    <ul class="dropdown-menu" style="position: absolute; left: -200px;" >
-                                      <li><a href="#"><i class="fa fa-heart" aria-hidden="true" style="color: lightgray;"></i> Add to Favourites</a></li>
-                                      <li><a href="#"><i class="fa fa-heart" aria-hidden="true" style="color: #E91E63;"></i> Added to Favourites &nbsp;&nbsp;&nbsp;<span style="color: gray">Remove</span></a></li>
-                                      <li><a href="#"><i class="fa fa-times" aria-hidden="true" style="color: lightgray; font-size: 18px;"></i> Remove from Playlist</a></li>
-                                    </ul>
-                                </div>
-                            </li>
-                            <li href="#" class="list-group-item"><span style="color: lightgray; margin-right: 20px; margin-left: 15px;">1</span><div style="display: inline-block;"><img src="Divide_cover.png" style="width: 40px; display: inline; margin-right: 10px;"></div><div style="display: inline-block;position: relative; top: 12px;"><span class="songTitle">First Item</span><br><span class="art">artist</span></div>
-                                <div class="dropdown" style="float: right; top: 10px;">
-                                    <button class="btn btn-default dropdown-toggle playlist-drop" type="button" data-toggle="dropdown" style="outline: none;"><img src="add.png" width="26px">
-                                    </button>
-                                    <ul class="dropdown-menu" style="position: absolute; left: -200px;" >
-                                      <li><a href="#"><i class="fa fa-heart" aria-hidden="true" style="color: lightgray;"></i> Add to Favourites</a></li>
-                                      <li><a href="#"><i class="fa fa-heart" aria-hidden="true" style="color: #E91E63;"></i> Added to Favourites &nbsp;&nbsp;&nbsp;<span style="color: gray">Remove</span></a></li>
-                                      <li><a href="#"><i class="fa fa-times" aria-hidden="true" style="color: lightgray; font-size: 18px;"></i> Remove from Playlist</a></li>
-                                    </ul>
-                                </div>
-                            </li>
 
                         </div>
                     </div>
@@ -128,7 +84,17 @@
             </div>
         </div>
     </div>
-
+    <!-- <li href="#" class="list-group-item"><span style="color: lightgray; margin-right: 20px; margin-left: 15px;">1</span><div style="display: inline-block;"><img src="Divide_cover.png" style="width: 40px; display: inline; margin-right: 10px;"></div><div style="display: inline-block;position: relative; top: 12px;"><span class="songTitle">First Item</span><br><span class="art">artist</span></div>
+        <div class="dropdown" style="float: right; top: 10px;">
+            <button class="btn btn-default dropdown-toggle playlist-drop" type="button" data-toggle="dropdown" style="outline: none;"><img src="add.png" width="26px">
+            </button>
+            <ul class="dropdown-menu" style="position: absolute; left: -200px;" >
+              <li><a href="#"><i class="fa fa-heart" aria-hidden="true" style="color: lightgray;"></i> Add to Favourites</a></li>
+              <li><a href="#"><i class="fa fa-heart" aria-hidden="true" style="color: #E91E63;"></i> Added to Favourites &nbsp;&nbsp;&nbsp;<span style="color: gray">Remove</span></a></li>
+              <li><a href="#"><i class="fa fa-times" aria-hidden="true" style="color: lightgray; font-size: 18px;"></i> Remove from Playlist</a></li>
+            </ul>
+        </div>
+    </li> -->
     <!-- FOOTER BEGINS THROUGH NAVBAR -->
     <nav class="navbar navbar-default navbar-fixed-bottom" style="height: 100px;  background: linear-gradient(to bottom left, #13547a  0%, #80d0c7 100%);">
         <img id="img-wrapper" src="sample-img.jpg">
